<resources>
    <string name="app_name">LAMA</string>
    <string name="math_anal">Mathematical Analysis</string>
    <string name="lin_al_amp"><![CDATA[Linear Algebra &]]></string>
    <string name="lama">LAMA</string>
    <string name="two_matrix">two_matrix</string>
    <string name="lambda_matrix">lambda_matrix</string>
    <string name="one_matrix">one_matrix</string>
    <string name="list_op_two_matrix">МАТРИЦА-МАТРИЦА</string>
    <string name="list_op_lam_matrix">МАТРИЦА-ЧИСЛО</string>
    <string name="list_op_matrix">МАТРИЦА</string>
    <string name="search">Поиск функции</string>
    <string name="title_activity_menu_nav">MenuNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="matrix_operations">Матричные операции</string>
    <string name="About_program">О программе</string>
    <string name="achievements">Достижения</string>
    <string name="nav_icon">навикон</string>
    <string name="backspace">backspace</string>
    <string name="app_description">Данное приложение является матричным калькулятором, который разработан для экономии вашего времени при работе с матричными операциями. \n\nВ отличае от других подобных приложений, здесь можно найти справочную информацию по любому преобразованию над матрицами, и есть возможность вычисления критерия Сильвестра. \n\nВ платной версии данной программы добавляется возможность фото-ввода матриц и полностью отключается реклама.</string>
    <string name="info_error">Введите сообщение об ошибке</string>
    <string name="send">Отправить</string>
    <string name="dark_theme">dark theme</string>
    <string name="title_activity_menu_nav_dark">MenuNavDarkActivity</string>
    <string name="attention">Внимание! При удалении приложения весь прогресс будет потерян.</string>
    <string name="achieve_1">Первопроходец</string>
    <string name="achieve_2">Знаток</string>
    <string name="achieve_3">Модник</string>
    <string name="achieve_4">Исследователь</string>
    <string name="achieve_5">Наблюдатель</string>
    <string name="achieve_6">Ламовед ур. 1</string>
    <string name="achieve_7">Ламовед ур. 2</string>
    <string name="achieve_8">Ламовед ур. 3</string>
    <string name="achieve_9">Ламовед ур. 4</string>
    <string name="next">Далее</string>
    <string name="count">Вычислить</string>
    <string name="name_of_function">nameOfFunction</string>
    <string name="scalar_mul_info">В линейной алгебре, скалярное умножение - это операция над двумя векторами, результатом которой является скаляр, то есть число, не зависящее от выбора системы координат. Для скалярного умножения матриц необходимо, чтобы число столбцов в первой матрице было равно числу строк во второй.</string>
    <string name="back_to_menu">Вернуться в меню</string>
    <string name="x">X</string>
    <string name="raw">с\nт\nр\nо\nч\nк\nи</string>
    <string name="column">с\nт\nо\nл\nб\nц\nы</string>
    <string name="memory_matrix">Запомнить матрицу</string>
    <string name="wheel">Wheel</string>
    <string name="description">description</string>
    <string name="enter_number">Введите число</string>
    <string name="by_studio_22">Made by Studio 22</string>
    <string name="logo">logo</string>
    <string name="fun_res">Исследование функций</string>
    <string name="in_dev">В разработке</string>
    <string name="history">История</string>
    <string name="choice">Выберите</string>
    <string name="e">e</string>
    <string name="tip">Подсказка</string>
    <string name="tip_text">Для получения более подробной информации о функции необходимо сделать свайп влево в области её кнопки.</string>
    <string name="not_show">Больше не показывать</string>
    <string name="tip_button_text">Понятно</string>
    <string name="instruction">В верхнем правом углу находится переключатель формата вывода. Можно выбрать десятичное, экспоненциальное или дробное представление результата.</string>
    <string name="rang">Рангом матрицы А называется число линейно независимых строк или столбцов. Также ранг матрицы – наивысший из порядков ненулевых миноров этой матрицы.\nСуществует несколько методов нахождения ранга матрицы:\nМетод элементарных преобразований. \nРанг матрицы равен числу ненулевых строк в матрице после приведения её к ступенчатой форме при помощи элементарных преобразований над строками матрицы.\nМетод окаймляющих миноров. \nПусть в матрице A найден ненулевой минор k-го порядка M. Рассмотрим все миноры (k+1)-го порядка, включающие в себя (окаймляющие) минор M; если все они равны нулю, то ранг матрицы равен k. В противном случае среди окаймляющих миноров найдется ненулевой, и вся процедура повторяется.\n</string>
    <string name="triangle">Матрица ступенчатая, если выполняются условия:\n1. Все нулевые строки матрицы стоят последними.\n2. 1-й ненулевой элемент строки всегда находится строго правее первого ненулевого элемента предыдущей строки.\n3. Все элементы столбца под первым ненулевым элементом строки равны 0\n\nТеорема: Любая матрица с помощью элементарных преобразований может быть приведена к ступенчатому виду\nВычтем из второй строчки матрицы первую, а из третьей первую, до множенную на два.\n</string>
    <string name="Gause">Метод Гаусса:\nЭто метод последовательного исключения переменных, когда с помощью элементарных преобразований система уравнений приводится к равносильной системе треугольного вида, из которой последовательно, начиная с последних (по номеру), находятся все переменные системы.\n</string>
    <string name="Silv">Критерий гласит, что для положительной определенности квадратичной формы необхходимо и достаточно, чтобы угловые миноры её матрицы были положительны.\nДля отрицательной определённости квадратичной формы необходимо и достаточно, чтобы угловые миноры чётного порядка её матрицы были положительны, а нечётного порядка — отрицательны.\n</string>
    <string name="sobzn">Нулевой вектор x называется собственным вектором линейного оператора A’, если существует такое число a, что А’(х)=ax. Число а называется собственным значением линейного оператора.\nТеорема: Собственный вектор линейного оператора относится к единственному собственному значению\nМатрица |A – aE| называется характеристической матрицей линейного оператора А’.\nУравнение |A – aE|=0 называется характеристическим уравнением линейного оператора A’, а корни этого уравнения – характеристическими корнями.\nТеорема: Любое собственное значение линейного оператора А’ является его характеристическим корнем. (Обратное также верно)\n</string>
    <string name="sobvec">Нулевой вектор x называется собственным вектором линейного оператора A’, если существует такое число a, что А’(х)=ax. Число а называется собственным значением линейного оператора.\nТеорема: Собственный вектор линейного оператора относится к единственному собственному значению\nСвойства собственных векторов:\n1)\tЕсли x1; x2; …; xn – линейно независимые собственные векторы линейного оператора А’, относящиеся к одному и тому же собственному значению а, то любая нетривиальная линейная комбинация этих векторов является собственным вектором, относящимся к этому собственному значению. \n2)\tЕсли а1; a2; …; ak – различные собственные значения линейного оператора A’, то отвечающее им собственные вектора x1; x2; …; xn – линейно независимые.\nДля нахождения собственных векторов необходимо решить систему (A – aE) * x = 0, для каждого собственного значения a.\n</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>