<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_dark"
    app:startDestination="@+id/matrix_fragment_dark">

    <fragment
        android:id="@+id/matrix_fragment_dark"
        android:name="io.github.studio22.lama.ui.matrix.MatrixFragmentDark"
        android:label="@string/one_matrix"
        tools:layout="@layout/fragment_matrix_dark" />

    <fragment
        android:id="@+id/app_fragment_dark"
        android:name="io.github.studio22.lama.ui.app.AboutProgramFragmentDark"
        android:label="@string/About_program"
        tools:layout="@layout/fragment_about_program_dark" />

    <fragment
        android:id="@+id/achievements_fragment_dark"
        android:name="io.github.studio22.lama.ui.achievements.AchievementFragmentDark"
        android:label="@string/achievements"
        tools:layout="@layout/fragment_achiev_dark" />
</navigation>