<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="362dp"
        android:layout_height="362dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo_new_dark"
        android:contentDescription="@string/lama"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lama"
        android:textAlignment="center"
        android:textAppearance="@style/TextDark"
        android:textSize="38.4sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lin_al_amp"
        android:textAppearance="@style/TextDark"
        android:textSize="25.6sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math_anal"
        android:textAppearance="@style/TextDark"
        android:textSize="25.6sp"/>

</LinearLayout>