<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".ui.app.AboutProgramFragmentDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About_program"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextDark"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="27dp"/>

    <TextView
        android:layout_width="371dp"
        android:layout_height="415dp"
        android:text="@string/app_description"
        android:textAppearance="@style/TextDark"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        android:background="@color/background_dark"
        android:src="@drawable/ic_nav_dark"
        android:contentDescription="@string/navicon"/>

    <EditText
        android:layout_width="371dp"
        android:layout_height="40dp"
        android:id="@+id/for_message_dark"
        android:hint="@string/info_error"
        android:textAppearance="@style/TextDark"
        android:textColorHint="@color/background"
        android:inputType="textNoSuggestions"
        android:layout_marginTop="515dp"
        android:background="@null"
        android:layout_marginStart="20dp"
        android:autofillHints="function"/>

    <Button
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/express_button_dark"
        android:textAppearance="@style/TextDark"
        android:id="@+id/send_button_dark"
        android:text="@string/send"
        android:layout_marginTop="580dp"
        android:onClick="onClickSendEmailDark"
        tools:ignore="OnClick"/>

</FrameLayout>