<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginStart="33dp"
        android:scaleType="centerCrop"
        android:background="@color/background"
        android:src="@drawable/ic_backspace"
        android:onClick="OnClickBackMatrix"
        android:contentDescription="@string/backspace"/>

    <TextView
        android:id="@+id/function_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_function"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="33dp"
        android:textAppearance="@style/Text"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/result"/>

    <!--CheckBox-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory_matrix"
        android:textAppearance="@style/Text"
        android:layout_marginTop="470dp"
        android:layout_marginStart="60dp"
        android:visibility="gone"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:layout_marginStart="290dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="286dp"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/express_button"
        android:textAppearance="@style/Text"
        android:id="@+id/to_input_matrix"
        android:text="@string/back_to_menu"
        android:layout_marginTop="580dp"
        android:onClick="onClickToMenu"
        tools:ignore="OnClick"/>

</FrameLayout>