<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:id="@+id/tip_header"
        android:textAppearance="@style/Text"
        android:textColor="?attr/textViewColor"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/tip_text"
        android:id="@+id/tip_content"
        android:textAppearance="@style/Text"
        android:textColor="?attr/textViewColor"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tip_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_text"
        android:text="@string/not_show"
        android:textAppearance="@style/Text"
        android:textColor="?attr/textViewColor"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@+id/tip_content"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/checkbox_text"
        app:layout_constraintTop_toBottomOf="@+id/tip_content" />

    <Button
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:id="@+id/tip_button"
        android:layout_marginTop="20dp"
        android:text="@string/tip_button_text"
        android:textAppearance="@style/Text"
        android:textColor="?attr/textViewColor"
        android:textSize="18sp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/tip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>