<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.achievements.AchievementFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievements"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/Text"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="27dp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        android:background="@color/background"
        android:src="@drawable/ic_nav"
        android:contentDescription="@string/navicon"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="96dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_1"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="17dp"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="165dp"
                    android:layout_marginTop="96dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_2"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="155dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="302dp"
                    android:layout_marginTop="96dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_3"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="292dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="46dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_4"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="17dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="165dp"
                    android:layout_marginTop="46dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_5"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="155dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="302dp"
                    android:layout_marginTop="46dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_6"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="292dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="46dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_7"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="17dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="165dp"
                    android:layout_marginTop="46dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_8"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="155dp"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="111dp"
                    android:layout_marginStart="302dp"
                    android:layout_marginTop="46dp"
                    android:src="@drawable/achiev_gray"
                    android:contentDescription="@string/achievements"/>

                <TextView
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_9"
                    android:textAppearance="@style/Text"
                    android:textAlignment="center"
                    android:layout_marginStart="292dp"
                    android:textSize="12sp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attention"
        android:textAppearance="@style/Text"
        android:textAlignment="center"
        android:layout_marginTop="620dp"/>

</FrameLayout>